Add support for configuring the max blob size per query Increase minimum Java version to 17 Upgrade to latest HSQLDB for testing